; ModuleID = '/home/carl/AnghaBench/git/extr_ident.c_copy_email.c'
source_filename = "/home/carl/AnghaBench/git/extr_ident.c_copy_email.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i32 }
%struct.strbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.passwd*, %struct.strbuf*, i32*)* @copy_email to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_email(%struct.passwd* %0, %struct.strbuf* %1, i32* %2) #0 {
  %4 = alloca %struct.passwd*, align 8
  %5 = alloca %struct.strbuf*, align 8
  %6 = alloca i32*, align 8
  store %struct.passwd* %0, %struct.passwd** %4, align 8
  store %struct.strbuf* %1, %struct.strbuf** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %8 = load %struct.passwd*, %struct.passwd** %4, align 8
  %9 = getelementptr inbounds %struct.passwd, %struct.passwd* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @strbuf_addstr(%struct.strbuf* %7, i32 %10)
  %12 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %13 = call i32 @strbuf_addch(%struct.strbuf* %12, i8 signext 64)
  %14 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %15 = call i32 @add_mailname_host(%struct.strbuf* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  br label %22

18:                                               ; preds = %3
  %19 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @add_domainname(%struct.strbuf* %19, i32* %20)
  br label %22

22:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i32) #1

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #1

declare dso_local i32 @add_mailname_host(%struct.strbuf*) #1

declare dso_local i32 @add_domainname(%struct.strbuf*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
